custom.css
@font-face {
  font-family: alice;
  src: url(./fonts-alice/AkzidenzGroteskPro-Regular.otf);
}

html, body {
    font-family: alice!important;
}

body #login h1 a {
    background-image: url('images/ALICE-logo.png');
    background-size: 150px;
    width: 100%;
    height: 100px;
}

.box-v {
    display: flex;
    flex-direction: column;
    padding-right: 2em;
    max-height: 250px;
}

.box-h {
    min-width: 50%;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    color: var(--dark-grey);
}

@media screen and (max-width: 800px) {
    .box-h {
        flex-wrap: wrap;
        flex-direction: column;
        width: 100%;
    }

    .box-v {
        max-height: initial;
        padding-right: 0;
        margin-bottom: 1em;
    }
}

.aliceblogs-filter-title {
    color: #666;
    text-transform: lowercase;
    text-decoration: underline;
    font-size: 1.2em;
    padding-bottom: .5em;
}

:root {
    --white: #ffffff;
    --light: #f0eff3;
    --black: #000000;
    --dark-blue: #1f2029;
    --dark-light: #353746;
    --red: #da2c4d;
    --yellow: #f8ab37;
    --light-grey: #ecedf3;
    --grey:  #999999;
    --dark-grey: #666;

}

.box-v [type="checkbox"]:checked,
.box-v [type="checkbox"]:not(:checked),
.box-v [type="radio"]:checked,
.box-v [type="radio"]:not(:checked){
    position: absolute;
    left: -9999px;
    width: 0;
    height: 0;
    visibility: hidden;
}

.checkbox-tools:checked + label,
.checkbox-tools:not(:checked) + label{
    position: relative;
    display: inline-block;
    /*padding: 0 .5em .5em 0;*/
    /*width: 100%;*/
    min-width: 60px;
    font-size: 14px;
    line-height: 20px;
    letter-spacing: 1px;
    padding-bottom: .5em;
    /*margin: 0 auto;*/
    margin-right: 5px;
    text-align: left;
    overflow: hidden;
    cursor: pointer;
    text-transform: uppercase;
    color: var(--gray);
}

.checkbox-tools:hover + label:hover{
    color: var(--black);
}
.checkbox-tools:checked + label{
    color: var(--black);
}

#aliceblogs-header {
    display: flex;
}

#aliceblogs-header-menu {
    text-align: right;
}

#aliceblogs-searchbar {
    width: 100%;
    font-size: 20px;
    border: none;
    border-bottom: 1px solid var(--light-grey);
}

#aliceblogs-searchbar:focus {
    border-color: var(--black);
}

#aliceblogs-searchbar-proposal {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin-top: 1em;
}

.proposal-tag {
    margin-right: 1em;
}

.proposal-tag:hover {
    cursor: pointer;
    color: var(--black);
    text-decoration: underline;
}

#aliceblogs-searchbar-proposal-title {
    margin-right: 1em;
    font-size: 15px;
}

.aliceblogs-post-tag:hover {
    color: var(--black);
    text-decoration: underline;
}

.aliceblogs-field-width {
    width: 50% !important;
}

#aliceblogs-newuser-role {
    padding: 1em;
}

/* Divi - Stick footer to bottom */
#page-container #et-boc {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-flow: column;
    flex-flow: column;
    min-height: 100vh;
}

#et-main-area {
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -ms-flex-flow: column;
    flex-flow: column;
}

#et-main-area, #main-content  {
    -webkit-box-flex: 1 0 auto;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
}

/** Edit WP footer class **/
#footer-info {
    text-align: center !important;
    float: none !important;
}

/**** MOSAIC CONTENT ****/
#aliceblogs-filter-box {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-left: 1em;
}

.aliceblogs-filter-cell {
    border: 2px solid var(--black);
    padding: 1em;
}

/*
#aliceblogs-filter-students {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    max-height: 100%;
    padding-bottom: .5em;
}
*/

.aliceblogs-filter-column {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    max-height: 100%;
    padding-bottom: .5em;
}

.aliceblogs-filter-checkall {
    text-decoration: underline;
    cursor: pointer;
}

#aliceblogs-carddeck {
  column-count: 4; 
  column-gap: 8px; 
}

@media screen and (max-width: 1200px) {
    #aliceblogs-carddeck {
      column-count: 3; 
    } 
}
@media screen and (max-width: 800px) {
    #aliceblogs-carddeck {
      column-count: 1; 
    } 
}

a.aliceblogs-card {
    display: block;
    break-inside: avoid;
    page-break-after: avoid;
    page-break-before: avoid;
    page-break-inside: avoid;
}
a.aliceblogs-card > .aliceblogs-card-container {
    display: inline-block;
}

.aliceblogs-card-img {
    width: 100%;
    height: auto;

}


.aliceblogs-card-text {
    text-align: center;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s, opacity 0.5s linear;
}
@media screen and (max-width: 800px){
    .aliceblogs-card-text {
        visibility: visible;
        opacity: 1;
    }
    .aliceblogs-card:hover .aliceblogs-card-text{
        visibility: initial!important;
        opacity: initial!important;
    }
}

.aliceblogs-card:hover .aliceblogs-card-text {
    visibility: visible;
    opacity: 1;
}

.aliceblogs-nocard {
    color: var(--grey);
    font-size: 20px;
}

.aliceblogs-view-options {
    display: flex; 
    /*justify-content: space-between; */
    /*width: 50px;*/
    height: 30px;
    color: var(--black);
}

.aliceblogs-view-options > div:hover {
    cursor: pointer;
}

.aliceblogs-view-active {
    filter: invert(.5);
}

#aliceblogs-view-mosaic {
    width: 30px;
    background-image: url('images/card_layout.svg');
    background-repeat: no-repeat;
    background-size: cover;
    margin-right: 10px;
}

#aliceblogs-view-list {
    width: 30px;
    background-image: url('images/list_layout.svg');
    background-repeat: no-repeat;
    background-size: cover;
}

.aliceblogs-list {
    margin-bottom: 4em;
    color: var(--black);
    width: 100%;
}

.aliceblogs-list-footer {
    margin-top: 2em;
    border-bottom: 1px solid var(--black);
}

.aliceblogs-list-title > h1 > a:hover {
    text-decoration: underline;
}

.aliceblogs-list-content {
    text-align: justify;
    color: #666;
}

.aliceblogos-notice {
    margin-left: 0 !important;
    width: 70%;
}

#aliceblogs-404-title {
    font-size: 70px;
    font-weight: bold;
    margin-top: 2em;
}

#aliceblogs-404-subtitle {
    font-size: 36px;
    color: #999;
    margin-top: 1.5em;
}

#aliceblogs-404-home {
    font-size: 16px;
    margin-top: 3em;
}

#aliceblogs-metabox-title {
    font-weight: bold !important;
    font-size: 1.3em !important;
    padding-left: 0 !important;
}

.aliceblogs-metabox-item {
    font-size: 14px;
}

#aliceblogs-page-home {
    display: flex;
}

#aliceblogs-page-home a {
    margin-right: 1em;
}

/***** LOADER *****/

#container-loader {
    display: flex;
    width: 100%;
    justify-content: center;
}
.loader {
    width:45px;
    height:45px;
    display:inline-block;
    padding:0px;
    border-radius:100%;
    border:5px solid;
    border-top-color:black;
    border-bottom-color:rgba(255,255,255, 0.3);
    border-left-color: black;
    border-right-color:rgba(255,255,255, 0.3);
    -webkit-animation: loader 1s ease-in-out infinite;
    animation: loader 1s ease-in-out infinite;
 }
 @keyframes loader {
    from {transform: rotate(0deg);}
    to {transform: rotate(360deg);}
 }
 @-webkit-keyframes loader {
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(360deg);}
 }

